upgrade to openjdk 11; required for datastore emulator